--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Women'
 - !lcsh 'Women -- Social and moral questions'
 - !lcsh 'Feminism'
+- GITenberg
 title: Feminism and Sex-Extinction
 url: http://www.gutenberg.org/ebooks/37964
